<resources>
    <string name="app_name">Montfort Care</string>
    <string name="child_name">Child\'s Name</string>
    <string name="parent_name">Parent\'s Name</string>
    <string name="emailaddress">Email Address or Phone Number</string>
    <string name="postal">Address</string>
    <string name="password">Password</string>
    <string name="confPass">Confirm Password</string>
    <string name="cont">Continue</string>
    <string name="childAge">Child\'s Age</string>
    <string name="Gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="languagesKnown">Languages Known to Parents</string>
    <string name="languagesUsed">Languages Used with Child</string>
    <string name="Hindi">Hindi</string>
    <string name="English">English</string>
    <string name="Marathi">Marathi</string>
    <string name="ageDetected">Age at which Child\'s Hearing loss Detected</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Therapy">Therapy Attended?</string>
    <string name="hearingAidFitted">Age Hearing Aid Fitted</string>
    <string name="username">Username</string>
    <string name="mobNo_EmailID">Mobile Number/Email ID</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="introduction">Introduction</string>
    <string name="therapy_centre">Early Identified</string>
    <string name="assessments">Assessments</string>
    <string name="child_progress">Child\'s Progress</string>
    <string name="resources">Resources</string>
    <string name="about_us">About Us</string>
    <string name="assessment_icon">Assessment Icon</string>
    <string name="an_icon_for_information">An Icon for Information</string>
    <string name="an_icon_for_progress">An icon for progress</string>
    <string name="an_icon_for_resources">An icon for resources</string>
    <string name="an_icon_for_about_us">An icon for About Us</string>
    <string name="an_icon_for_therapy_centre">Early Identified(O-3 years)</string>
    <string name="place_holder_text">Place Holder Text</string>
    <string name="early_identified">Early Identified (0-3 Years)</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="third_year">Third Year</string>
    <string name="late_identified">Late Identified (3-6 Years)</string>
    <string name="fourth_year">Fourth Year</string>
    <string name="fifth_year">Fifth Year</string>
    <string name="sixth_year">Sixth Year</string>
</resources>