<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp2"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="521dp"
        android:background="@drawable/signup_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576">

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/childAge"
            android:inputType="number"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/Gender"
            android:textAlignment="center"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/male"
                android:textAlignment="center"/>

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/female"/>
            <RadioButton
                android:layout_marginStart="25dp"
                android:layout_marginEnd="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"/>
        </RadioGroup>

        <TextView
            android:id=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/languagesKnown"
            android:textAlignment="center"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CheckBox" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CheckBox" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/emailaddress"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="317dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/postal"
            android:inputType="textPostalAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confPass"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alice"
        android:text="@string/cont"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.307" />

</androidx.constraintlayout.widget.ConstraintLayout>