<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="521dp"
        android:background="@drawable/signup_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195">

        <EditText
            android:id="@+id/cNamee"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/child_name"

            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pName"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/parent_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/emailaddress"
            android:inputType="text" />

        <EditText
            android:id="@+id/address"
            android:layout_width="317dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/postal"
            android:inputType="text" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/pwd2"
            android:layout_width="316dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confPass"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alice"
        android:text="@string/cont"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>