<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="#00FFFFFF"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/header"
            app:menu="@menu/main_menu"
            android:layout_gravity="start"
            app:itemTextColor="@color/drawer_menu_color"
            app:itemIconTint="@color/drawer_menu_color"
            app:itemBackground="@android:color/transparent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxButtonHeight="20dp"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:stateListAnimator="@anim/animation"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/early_identified"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/introIcon"
                    android:layout_width="136dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:maxWidth="75dp"
                    app:srcCompat="@drawable/ic_baseline_child_care_24"
                    android:contentDescription="An icon"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/introIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Early Identified\n(0-3 Years)"
                    android:textAlignment="center"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:stateListAnimator="@anim/animation"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/late_identified"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/therapyCentreIcon"
                    android:layout_width="75dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/an_icon_for_therapy_centre"
                    app:srcCompat="@drawable/ic_hearing_24" />

                <TextView
                    android:id="@+id/therapyCentreTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/therapyCentreIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppinsbold"
                    android:textAlignment="center"
                    android:text="Late Identified\n(3-6 Years)" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="178dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/assessmentIcon"
                    android:layout_width="136dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/assessment_icon"
                    android:maxWidth="75dp"
                    app:srcCompat="@drawable/ic_assessment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/assessmentIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/assessments" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ProgressIcon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_progress_24"
                    android:contentDescription="@string/an_icon_for_progress"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ProgressIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/child_progress" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="178dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/resourceIcon"
                    android:layout_width="136dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/an_icon_for_resources"
                    android:maxWidth="75dp"

                    app:srcCompat="@drawable/ic_baseline_library_books_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resourceIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/resources" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/AboutUsIcon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/an_icon_for_about_us"
                    app:srcCompat="@drawable/ic_baseline_announcement_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/AboutUsIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/about_us" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>


    <!--    <TextView-->
    <!--        android:id="@+id/textView2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Hello World!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/signup"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="136dp"-->
    <!--        android:layout_marginTop="229dp"-->
    <!--        android:layout_marginEnd="187dp"-->
    <!--        android:layout_marginBottom="79dp"-->
    <!--        android:text="Signup"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/textView2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->